<resources>
    <string name="app_name">NewsDigest</string>
    <string name="error_msg">An error occurred!!! Try Later</string>
    <string name="password">Password</string>
    <string name="user_name">User Name</string>
    <string name="login">LOGIN</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="reset_password">Reset Password</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="logout">Logout</string>
    <string name="current_password">Enter current password</string>
    <string name="new_password">Enter new password</string>
    <string name="save_password">SAVE PASSWORD</string>
    <string name="toolbar_header">BOOKMARKS</string>
    <string name="no_bookmark_items">No bookmark items!</string>
</resources>
