<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/size_40dp"
    android:background="@color/color_white">

    <EditText
        android:id="@+id/et_current_password"
        android:layout_width="@dimen/size_200dp"
        android:layout_height="@dimen/size_50dp"
        android:layout_gravity="center"
        android:hint="@string/current_password"
        android:textColorHint="@color/color_login_text"
        android:textColor="@color/color_black" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="@dimen/size_200dp"
        android:layout_height="@dimen/size_50dp"
        android:layout_gravity="center"
        android:hint="@string/new_password"
        android:layout_marginTop="@dimen/size_40dp"
        android:textColorHint="@color/color_login_text"
        android:textColor="@color/color_black" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="@dimen/size_200dp"
        android:layout_height="@dimen/size_40dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/size_20dp"
        android:background="@color/color_deep_red"
        android:text="@string/save_password"
        android:textSize="@dimen/size_15dp"
        android:textStyle="bold" />

</LinearLayout>