<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_login"
                android:layout_width="@dimen/size_100dp"
                android:layout_height="@dimen/size_100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/login_icon" />

            <EditText
                android:id="@+id/tv_username"
                android:layout_width="@dimen/size_200dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_below="@+id/iv_login"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size_20dp"
                android:background="@color/color_login_textview"
                android:hint="@string/user_name"
                android:padding="@dimen/size_10dp"
                android:textColorHint="@color/color_login_text" />

            <EditText
                android:id="@+id/tv_password"
                android:layout_width="@dimen/size_200dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_below="@+id/tv_username"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size_40dp"
                android:background="@color/color_login_textview"
                android:hint="@string/password"
                android:padding="@dimen/size_10dp"
                android:textColorHint="@color/color_login_text" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="@dimen/size_200dp"
                android:layout_height="@dimen/size_40dp"
                android:layout_below="@+id/tv_password"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/size_20dp"
                android:background="@color/color_deep_red"
                android:text="@string/login"
                android:textSize="@dimen/size_15dp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>